5412.	[bug]		When using dnssec-policy, print correct keytiming
			metadata. [GL #1843]

5411.	[cleanup]	Refactoring of TCP accept code to use a single accept()
			and pass the accepted socket to child threads for
			processing. [GL !3320]

5410.	[func]		Add the ability to specify per-type record count
			limits in an "update-policy" statement, which
			are enforced when adding records via UPDATE.
			[GL #1657]

5409.	[performance]	When looking up NSEC3 data in a zone database, skip
			the check for empty non-terminal nodes; the NSEC3
			tree doesn't have any. [GL #1834]

5408.	[protocol]	Print Extended DNS Errors if present in OPT record.
			[GL #1835]

5407.	[func]		Zone timers are now exported via statistics channel.
			Thanks to Paul Frieden, Verizon Media. [GL #1232]

5406.	[func]		Added a new logging category, "rpz-passthru". It allows
			RPZ passthru actions to be logged into a separate
			channel. [GL #54]

5405.	[bug]		'named-checkconf -p' could include spurious text
			in server-addresses statements due to an uninitialized
			DSCP value. [GL #1812]

5404.	[bug]		'named-checkconf -z' could incorrectly indicate
			success if errors were found in one view but not in a
			subsequent one. [GL #1807]

5403.	[func]		Do not set UDP receive/send buffer sizes - use system
			defaults. [GL #1713]

5402.	[bug]		On FreeBSD, use SO_REUSEPORT_LB instead of SO_REUSEPORT.
			Enable use of SO_REUSEADDR on all platforms which
			support it. [GL !3365]

5401.	[bug]		The number of input queues allocated during dnstap
			initialization was too low, which could prevent some
			dnstap data from being logged. [GL #1795]

5400.	[func]		Add engine support to OpenSSL EdDSA implementation.
			[GL #1763]

5399.	[func]		Add engine support to OpenSSL ECDSA implementation.
			[GL #1534]

5398.	[bug]		Named could fail to restart if a zone with a double
			quote (") in its name was added with 'rndc addzone'.
			[GL #1695]

5397.	[func]		Update PKCS#11 EdDSA implementation to PKCS#11 v3.0.